# snobot

./: .gitignore  Makefile  README.md  app.py  chat_app.py  load_env_secure.py  main.py  pyproject.toml  ui_app.py
.streamlit/: config.toml
agents/: chat_agent.py  extract_agent.py  strings.py
deploy/: configure-services.sh  install-app.sh  monitor_setup.sh  nginx-snobot  setup-deployment.sh  snobot.service
evals/: README.md  precompute_databases.py  prepare_smoke_test.py  scoring.py  snomed_eval.py  span_analyzer.py
evals/data/snomed_challenge/: README.md
models/: __init__.py  core.py  db.py  extraction_log.py  model_config.py  ui.py
resources/: extract_agent.py  sql_db.py  st_resources.py  vec_db.py
resources/omop_vocab/: README.md
ui/: __init__.py  annotated.py  examples.py  models.py  resolver.py  state.py  utils.py
ui/components/: annotated.py  disclaimer.py
ui/pages/: __init__.py  annotator.py  chat.py
utils/: __init__.py  report_generator.py
