[project]
name = "snobot"
version = "0.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "chromadb>=0.5.0",
    "duckdb>=1.3.2",
    "opaiui>=0.13.2",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.48.0",
    "tabulate>=0.9.0",
]
